--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <table>
                     <tr>
                         <td><button class="button">c</button></td>
-                        <td><button class="button">|</button></td>
+                        <td><button class="button">reset</button></td>
                         <td><button class="button">/</button></td>
                         <td><button class="button">x</button></td>
                     </tr>
