--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <p id="resultado"></p> 
                 <table>
                     <tr>
-                        <td><button class="button">c</button></td>
+                        <td><button class="button" onclick="limpar()">c</button></td>
                         <td><button class="button">reset</button></td>
                         <td><button class="button">/</button></td>
                         <td><button class="button">x</button></td>
