--- a/index.html
+++ b/index.html
@@ -15,30 +15,30 @@
                 <table>
                     <tr>
                         <td><button class="button" onclick="limpar()">c</button></td>
-                        <td><button class="button">reset</button></td>
-                        <td><button class="button">/</button></td>
-                        <td><button class="button">x</button></td>
+                        <td id="botao_reset"><button class="button" onclick="reset()">reset</button></td>
+                        <td><button class="button" onclick="inserir('/')">/</button></td>
+                        <td id="multiplicar"><button class="button" onclick="multiplicar('x')">x</button></td>
                     </tr>
                     <tr>
                         <td><button class="button" onclick="inserir('1')">1</button></td>
                         <td><button class="button" onclick="inserir('2')">2</button></td>
                         <td><button class="button" onclick="inserir('3')" >3</button></td>
-                        <td><button class="button">-</button></td>
+                        <td><button class="button" onclick="inserir('-')">-</button></td>
                     </tr>
                     <tr>
                         <td><button class="button" onclick="inserir('4')">4</button></td>
                         <td><button class="button" onclick="inserir('5')">5</button></td>
                         <td><button class="button" onclick="inserir('6')">6</button></td>
-                        <td><button class="button">+</button></td>
+                        <td><button class="button" onclick="inserir('+')">+</button></td>
                     </tr>
                     <tr>
-                        <td><button class="button" onclick="inserir('7')">7</button></td>
+                        <td id="num_7"><button class="button"  onclick="inserir('7')">7</button></td>
                         <td><button class="button" onclick="inserir('8')">8</button></td>
                         <td><button class="button" onclick="inserir('9')">9</button></td>
                         <td rowspan="2">
                             <button
                                 class="button"
-                                style="height: 124px; background-color: #fe9897"
+                                style="height: 124px; background-color: #fe9897" onclick="calcular()"
                             >
                                 =
                             </button>
@@ -46,11 +46,11 @@
                     </tr>
                     <tr>
                         <td colspan="2">
-                            <button class="button" style="width: 124px">
+                            <button class="button" style="width: 124px" onclick="inserir('0')">
                                 0
                             </button>
                         </td>
-                        <td><button class="button">,</button></td>
+                        <td><button class="button" onclick="inserir('.')">,</button></td>
                     </tr>
                 </table>
             </div>
