Operador único no espeço na parte resultado

--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
                     <tr>
                         <td><button class="button" onclick="limpar()">c</button></td>
                         <td id="botao_reset"><button class="button" onclick="reset()">reset</button></td>
-                        <td><button class="button" onclick="inserir('/')">/</button></td>
+                        <td><button class="button" onclick="inserir('/',opera=true)">/</button></td>
                         <td id="multiplicar"><button class="button" onclick="multiplicar('x')">x</button></td>
                     </tr>
                     <tr>
                         <td><button class="button" onclick="inserir('1')">1</button></td>
                         <td><button class="button" onclick="inserir('2')">2</button></td>
                         <td><button class="button" onclick="inserir('3')" >3</button></td>
-                        <td><button class="button" onclick="inserir('-')">-</button></td>
+                        <td><button class="button" onclick="inserir('-',opera=true)">-</button></td>
                     </tr>
                     <tr>
                         <td><button class="button" onclick="inserir('4')">4</button></td>
                         <td><button class="button" onclick="inserir('5')">5</button></td>
                         <td><button class="button" onclick="inserir('6')">6</button></td>
-                        <td><button class="button" onclick="inserir('+')">+</button></td>
+                        <td><button class="button" onclick="inserir('+',opera=true)">+</button></td>
                     </tr>
                     <tr>
                         <td id="num_7"><button class="button"  onclick="inserir('7')">7</button></td>
