--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                         <td><button class="button" onclick="limpar()">c</button></td>
                         <td id="botao_reset"><button class="button" onclick="reset()">reset</button></td>
                         <td><button class="button" onclick="inserir('/',opera=true)">/</button></td>
-                        <td id="multiplicar"><button class="button" onclick="multiplicar('x')">x</button></td>
+                        <td id="multiplicar"><button class="button" onclick="multiplicar('x'),multi=True">x</button></td>
                     </tr>
                     <tr>
                         <td><button class="button" onclick="inserir('1')">1</button></td>
