modificação da string a ser inserida

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                 0
                             </button>
                         </td>
-                        <td><button class="button" onclick="inserir('.')">,</button></td>
+                        <td><button class="button" onclick="inserir(',')">,</button></td>
                     </tr>
                 </table>
             </div>
