Remoção de id e parâmetro

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                         <td><button class="button" onclick="limpar()">AC</button></td>
                         <td id="botao_reset"><button class="button" onclick="reset()">C</button></td>
                         <td><button class="button" onclick="inserir('/',opera=true)">/</button></td>
-                        <td id="multiplicar"><button class="button" onclick="inserir('x',opera=true,multi=true)">x</button></td>
+                        <td><button class="button" onclick="inserir('x',opera=true)">x</button></td>
                     </tr>
                     <tr>
                         <td><button class="button" onclick="inserir('1')">1</button></td>
